cmake_minimum_required(VERSION 3.0)
PROJECT(my_proxy_server)

#C11
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")

#bin
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

#head file path
INCLUDE_DIRECTORIES(include)

#source directory
AUX_SOURCE_DIRECTORY(src DIR_SRCS)
SET(src_total ${DIR_SRCS} )

# #threads
# FIND_PACKAGE(Threads)
# TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})

#boost
SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREAD ON)
FIND_PACKAGE(Boost 1.42.0 REQUIRED COMPONENTS system thread regex)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
  LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)

SET(BOOST_LIBS ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_REGEX_LIBRARY})
#add executable file，
ADD_EXECUTABLE(${PROJECT_NAME} ${src_total})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${BOOST_LIBS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -lpthread -lm)









